all form setup done no testing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10967,3 +10967,11 @@ a.text-dark:focus {
     background: deepskyblue;
     color: white !important;
 }
+
+.custom-err{
+
+}
+label.error {
+  float: none; color: red;   color: red;
+    font-size: 11px;
+    font-weight: 500;}
